# CIBOS-Platform

./: AARCH64-BRINGUP-DIAGNOSIS.md  ARCH-ABSTRACTION-AND-ALIGNMENT.md  ARCH-BRINGUP-CONTRACT-DESIGN.md  ARCHITECTURES.md  BOOT.md  BOOTLOADER-DESIGN.md  CROSS-ARCH-AUDIT.md  Cargo.toml  DTB-AND-HARDCODED-VALUES.md  DYNAMIC-MEMORY-MAP-SIZING.md  DYNAMIC-MMIO-MAPPING.md  E1000-MMIO-HANG-DIAGNOSIS.md  F1-INTERACTIVE-SESSION-PLAN.md  FINALIZATION-INVENTORY.md  FORWARD-PLAN-DISPLAY-IPC-NET-ARCH.md  I686-COMPLETION-ROADMAP.md  I686-PARITY-ACCOUNTING.md  IDENTITY-MAP-REGION-AWARENESS.md  LARGE-PAGE-ANALYSIS-CORRECTION.md  LARGE-PAGE-DESIGN.md  LICENSE  MANIFEST.txt  MEMORY-TYPE-MODEL-REVIEW.md  MMIO-DEVICE-MEMORY-FIX.md  MMIO-IN-RAM-MAP-FIX.md  MMU-PORTABILITY-DECISION.md  NETWORKING.md  PERIPHERAL-DTB-DISCOVERY.md  PLATFORMS.md  PORT-PLAN-AND-REVIEW.md  PRODUCTION-CLEANUP-AUDIT.md  PROGRESS-AND-ROADMAP.md  README.md  REFLECTION-AND-ACTION-PLAN.md  REMAINING-ARC-AND-ARCH-WIFI-PLAN.md  SECURITY-NOTES.md  STATIC-VS-DYNAMIC-DEVICE-DISCOVERY.md  TESTING-GUIDE.md  TRACK2-DESIGN.md  TRACK2-LIVE-CONTEXT-DESIGN.md  (+13 more)
accounts/: Cargo.toml
accounts/src/: lib.rs
applications/calc-service/: Cargo.toml
applications/calc-service/src/: lib.rs
applications/courier/: Cargo.toml
applications/courier/src/: lib.rs
applications/editor/: Cargo.toml
applications/editor/src/: lib.rs
applications/kvstore/: Cargo.toml
applications/kvstore/src/: lib.rs
applications/lens/: Cargo.toml
applications/lens/src/: lib.rs  web_demo.rs
applications/lockscreen/: Cargo.toml
applications/lockscreen/src/: lib.rs
applications/notepad/: Cargo.toml
applications/notepad/src/: gui_demo.rs  lib.rs
applications/package-manager/: Cargo.toml
applications/package-manager/src/: lib.rs
applications/probe/: Cargo.toml
applications/probe/src/: lib.rs
applications/shell/: Cargo.toml
applications/shell/src/: lib.rs  main.rs
applications/trove/: Cargo.toml
applications/trove/src/: lib.rs
bootloader/: README.md  build.sh
cibios/: Cargo.toml  QEMU.md  build.rs
cibios/linker/: aarch64.ld  riscv64.ld  x86.ld  x86_64.ld
cibios/src/: detection.rs  entropy.rs  error.rs  fdt.rs  handoff.rs  image.rs  lib.rs  main.rs  multiboot.rs  verification.rs
cibios/src/bare/: mod.rs
cibios/src/bare/arch/: aarch64.rs  mod.rs  riscv64.rs  x86.rs  x86_64.rs
cibios/src/bare/boot/: aarch64.s  riscv64.s  x86.s  x86_64.s  x86_64_bootloader.s  x86_bootloader.s
cibos-app/: Cargo.toml
cibos-app/src/: channel.rs  console.rs  console_backend.rs  fs.rs  heap.rs  input.rs  lib.rs  net.rs  rand.rs  rt.rs  syscall.rs  system_backend.rs
cibos-async-runtime/: Cargo.toml
cibos-async-runtime/src/: error.rs  executor.rs  future.rs  lib.rs  waker.rs
cibos-console/: Cargo.toml
cibos-console/src/: lib.rs
cibos-dtb/: Cargo.toml
cibos-dtb/src/: lib.rs
cibos-dtb/tests/: real_arm.dtb  real_dtb.rs  real_riscv.dtb
cibos-input/: Cargo.toml
cibos-kernel/: Cargo.toml  build.rs
cibos-kernel/src/: address_space.rs  block.rs  channel.rs  container.rs  entropy.rs  error.rs  frame.rs  fs.rs  gate.rs  kernel.rs  lib.rs  memory.rs  net_device.rs  paging.rs  scheduler.rs  selector.rs  sync.rs  syscall.rs
cibos-macros/: Cargo.toml
cibos-macros/src/: lib.rs
cibos-net/: Cargo.toml
cibos-net/src/: arp.rs  ethernet.rs  icmp.rs  ipv4.rs  lib.rs  udp.rs
cibos-sdk/: Cargo.toml
cibos-sdk/examples/: channel_communication.rs  hello_lane.rs  hello_main.rs  parallel_computation.rs  pipeline_processing.rs  profile_flexible.rs
cibos-sdk/src/: app.rs  broker.rs  channel.rs  container.rs  context.rs  error.rs  fs.rs  lane.rs  lib.rs  multihost.rs  net.rs  system.rs  time.rs  tracking.rs
cibos-sync/: Cargo.toml
cibos-sync/src/: lib.rs
deliverable-docs/: MANIFEST.txt  cibios-aarch64.elf  cibios-firmware-aarch64.elf  cibios-firmware-i686.elf  cibios-firmware-riscv64.elf  cibios-firmware-x86_64.elf  cibios-i686.elf  cibios-riscv64gc.elf  cibios-x86_64.elf  kernel-aarch64-Image
images/: cibos-aarch64.cimg  cibos-balanced-x86_64.cimg  cibos-compute-x86_64.cimg  cibos-compute-x86_64.img  cibos-riscv64.cimg  cibos-x86_64-signed.cimg  cibos-x86_64.cimg
kernel-image/: Cargo.toml  QEMU.md  build.rs
kernel-image/apps/: hello.ld  hello.s
kernel-image/apps/hello-rs/: Cargo.toml  hello-rs.ld
kernel-image/apps/hello-rs/src/: main.rs
kernel-image/apps/login-rs/: Cargo.toml  login-rs.ld
kernel-image/apps/login-rs/src/: main.rs
kernel-image/apps/shell-rs/: Cargo.toml  shell-rs.ld
kernel-image/apps/shell-rs/src/: main.rs
kernel-image/linker/: aarch64.ld  aarch64_handoff.ld  riscv64.ld  riscv64_handoff.ld  x86.ld  x86_64.ld  x86_64_handoff.ld  x86_handoff.ld
kernel-image/src/: boot.rs  bringup.rs  gui.rs  keyboard.rs  loader.rs  main.rs  net_stack.rs  ring3.rs  timer.rs
kernel-image/src/arch/: aarch64.rs  ata.rs  cache_riscv64.rs  e1000.rs  enter_user.s  gdt.rs  idt.rs  mod.rs  paging.rs  paging_aarch64.rs  paging_riscv64.rs  resume_user.s  ring3_ctx.rs  riscv64.rs  syscall_entry.s  user_payload.s  vectors_aarch64.s  vectors_riscv64.s  vga.rs  virtio_blk_mmio.rs  virtio_net.rs  x86.rs  x86_64.rs
kernel-image/src/boot/: aarch64.s  riscv64.s  x86.s  x86_64_handoff.s  x86_64_selfboot.s
keys/: README.txt  dev_signing.key  trusted_root.pub
login/: Cargo.toml
login/src/: lib.rs
platform-cli/: Cargo.toml
platform-cli/src/: lib.rs
platform-gui/: Cargo.toml
platform-gui/src/: lib.rs
platform-mobile/: Cargo.toml
platform-mobile/src/: lib.rs
platform-server/: Cargo.toml
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/crypto/: credential.rs  hash.rs  kem.rs  mod.rs  signature.rs
shared/src/crypto/backends/: mldsa.rs  mlkem.rs  mod.rs  sphincs.rs  sphincs_portable.rs
shared/src/protocols/: app_image.rs  authentication.rs  boot.rs  handoff.rs  ipc.rs  mod.rs  syscall.rs
shared/src/types/: authentication.rs  config.rs  error.rs  hardware.rs  isolation.rs  mod.rs  profiles.rs  time.rs
shared/src/utils/: mod.rs  serialization.rs  validation.rs
storage/: Cargo.toml
storage/src/: lib.rs
(+26 files in other folders)
