[package]
name = "accounts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CIBOS accounts — profile enrollment and authentication bound to isolation boundaries"

[lib]
name = "accounts"
path = "src/lib.rs"

[dependencies]
shared = { workspace = true, features = ["std", "pqc-sphincs"] }

[dev-dependencies]
shared = { workspace = true, features = ["std", "pqc-sphincs"] }
