[package]
name = "cibos-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CIBOS bare application runtime — the no_std library a ring-3 .capp links against to reach the kernel via syscalls (console, filesystem, exit)"

[lib]
name = "cibos_app"
path = "src/lib.rs"

[dependencies]
# The syscall ABI contract (numbers, FsRwArgs, errors). no_std, no alloc.
shared = { workspace = true, default-features = false }
# The Console trait, so cibos-app can provide the on-kernel (syscall-backed)
# console backend that the existing CLI apps and login::run_login run against.
cibos-console = { workspace = true }
