[package]
name = "cibos-console"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CIBOS line-oriented Console trait — the no_std I/O seam shared by host and kernel consoles"

[lib]
name = "cibos_console"
path = "src/lib.rs"

[dependencies]
# For ResourceLimits in the ShellSystem trait (no_std, no default features).
shared = { workspace = true, default-features = false }
