[package]
name = "cibos-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CIBOS procedural macros — the #[cibos::main] application entry point"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
