[package]
name = "cibos-net"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CIBOS from-scratch no_std network stack — Ethernet, ARP, IPv4, UDP, ICMP"

[lib]
name = "cibos_net"
path = "src/lib.rs"

[dependencies]

[features]
std = []
