[package]
name = "kernel-image"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CIBOS bootable kernel image — no_std/no_main entry, allocator, and boot from the CIBIOS handoff"

# The output ELF is named `cibos-kernel` (the kernel image). The package is
# `kernel-image` so it does not clash with the `cibos-kernel` library it links.
[[bin]]
name = "cibos-kernel"
path = "src/main.rs"

[dependencies]
# All no_std: the kernel image links no std-world crate.
shared = { workspace = true, default-features = false }
cibos-async-runtime = { workspace = true }
cibos-kernel = { workspace = true }
cibos-input = { workspace = true }
cibos-net = { workspace = true }
platform-gui = { workspace = true }
# Optional: the notepad GuiApp, baked only for the `gui-demo` feature.
notepad = { workspace = true, default-features = false, optional = true }
linked_list_allocator = { version = "0.10", default-features = false }

[build-dependencies]
# Used by build.rs to wrap the sample app's flat binary into a .capp image via
# the same AppImageBuilder the device parses, so the embedded image can never
# drift from the format. std feature: build scripts run on the host.
shared = { workspace = true, features = ["std"] }

[features]
# Default build targets REAL HARDWARE: the image expects CIBIOS to pass a real
# handoff pointer in the first-argument register (the bare-metal boot pair).
# This is the production posture — bare metal first.
#
# `self-boot` is an explicit opt-in for QEMU validation (`-kernel`): it
# synthesizes a handoff instead of reading one from CIBIOS, so the kernel can be
# booted standalone without the firmware. Build with `--features self-boot`.
default = []
self-boot = []

# Storage self-test (off by default). When enabled, the boot-time storage
# demonstration additionally performs a NON-DESTRUCTIVE write/read round-trip on
# the disk's last sector (save -> write pattern -> read back -> restore) to
# verify the ATA write path. Default boots stay read-only — a shipping OS does
# not scribble on the disk every boot — so this is opt-in for validation.
storage-selftest = []

# virtio-net probe demo (off by default). Probes the PCI bus for a virtio-net
# device, brings it through feature negotiation, and prints its MAC + link
# status. Requires QEMU with `-device virtio-net-pci` (or `-net nic,model=virtio`).
# Verifies the real device-discovery + negotiation path (B2).
virtio-net-demo = []

# Application selection (the `--with-apps` flavor flag). Each feature opts a
# `.capp` into the image: `build.rs` builds only the enabled ones, and `boot.rs`
# embeds + runs only those. `login` and `shell` are the interactive core
# (selectable but normally always on); `hello` is a demo. With none enabled the
# kernel still boots (storage/login/shell blocks are simply absent). The build
# wrapper's `--with-apps a,b,c` maps to `app-a,app-b,app-c`.
app-hello = []
app-login = []
app-shell = ["app-login"]
# `interactive-session` runs the gated login -> shell flow on the LIVE keyboard
# (no injected commands): a real person types the profile/password and shell
# commands. Distinct from the storage-selftest injected path (which stays
# deterministic). Pulls in the login + shell .capps.
interactive-session = ["app-login", "app-shell"]

# Display-driver demo: run the notepad GuiApp on the VGA text console via the
# kernel GUI runner (Surface -> VGA blit + PS/2 keyboard), proving the display
# driver end to end. Opt-in (off by default); x86_64 BIOS only.
gui-demo = ["dep:notepad"]

# IPC demo: open a local channel and round-trip a message through the real
# syscall ABI (OpenChannel -> ChannelSend -> ChannelRecv), proving the Track 2
# channel path and bounded back-pressure on the booted kernel. Opt-in; x86_64.
channel-demo = []
# `ring3-resume-demo` exercises the per-lane ring-3 context mechanism: a ring-3
# payload traps via `yield`, the kernel saves its full context and parks it, then
# `resume_ring3` continues it exactly where it trapped. Proves the load-bearing
# prerequisite for live multi-context (spawn) + cross-boundary channels.
ring3-resume-demo = []
# `ring3-multilane-demo` exercises the selector-owned Ring3Lane table (step 3):
# multiple ring-3 lanes, the canonical Scheduler picks the next ready one, a lane
# that yields parks and another runs, then the parked lane resumes. Proves the
# table-driven multi-context model that makes `spawn` real.
ring3-multilane-demo = []

# Operational profile bundles: forward to the kernel library's bundle so the
# bootable image is built as exactly one profile (ADR-007). The build wrapper
# pairs each with the matching CIBIOS firmware build. Orthogonal to `self-boot`.
profile-maximum-isolation = ["cibos-kernel/profile-maximum-isolation"]
profile-balanced          = ["cibos-kernel/profile-balanced"]
profile-performance       = ["cibos-kernel/profile-performance"]
profile-compute           = ["cibos-kernel/profile-compute"]
