[package]
name = "login"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CIBOS login gate — authenticates a profile before unlocking the console"

[lib]
name = "login"
path = "src/lib.rs"

[dependencies]
accounts = { workspace = true }
platform-cli = { workspace = true }
shared = { workspace = true, features = ["std"] }

[dev-dependencies]
shared = { workspace = true, features = ["std", "pqc-sphincs"] }
