[package]
name = "platform-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CIBOS CLI platform — console services and the CLI application runner"

[lib]
name = "platform_cli"
path = "src/lib.rs"

[dependencies]
shared = { workspace = true, features = ["std"] }
cibos-sdk = { workspace = true }
cibos-console = { workspace = true }
