[package]
name = "lens"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Lens — the CIBOS fetch client (browser)"

[lib]
name = "lens"
path = "src/lib.rs"

[[bin]]
name = "web-demo"
path = "src/web_demo.rs"

[dependencies]
cibos-sdk = { workspace = true }
web-protocol = { workspace = true }
vane = { workspace = true }
