[package]
name = "package-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CIBOS package manager — a CLI application with verifiable hashed packages"

[lib]
name = "package_manager"
path = "src/lib.rs"

[dependencies]
shared = { workspace = true, features = ["std"] }
cibos-sdk = { workspace = true }
platform-cli = { workspace = true }
