[package]
name = "trove"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Trove — the CIBOS app store, built on the package manager"

[lib]
name = "trove"
path = "src/lib.rs"

[dependencies]
cibos-sdk = { workspace = true }
package-manager = { workspace = true }
platform-cli = { workspace = true }
shared = { workspace = true, features = ["std"] }
